<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="272dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00BCD4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAC"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_weight="1"
                android:text="@string/textViewAC"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewPN"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_weight="1"
                android:text="@string/textViewMN"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewPorcentagem"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_weight="1"
                android:text="@string/textViewP"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewDivisao"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_weight="1"
                android:text="@string/textViewD"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewN7"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textView7"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewN4"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textView4"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewN1"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textView1"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewVirgula"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textViewVirgula"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewN8"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textView8"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewN5"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textView5"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewN2"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textView2"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewN0"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textView0"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewN9"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textView9"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewN6"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textView6"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewN3"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textView3"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewDelete"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textViewD"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMultiplicacao"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textViewV"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewSubtracao"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textViewN"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewAdicao"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textViewM"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:layout_weight="1"
                    android:text="@string/textViewI"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>